--- a/index.html
+++ b/index.html
@@ -128,24 +128,7 @@
   <script>
     // === DATA ===
     const videos = [
-      { title: "S Line - Season 1 Episode 1-6", year: 2025, url: "https://photos.app.goo.gl/qH2bRFYyokshJF4A6", thumb: "line.webp", category: "Fantasi, series" },
-      { title: "Jurassic World Rebirth ", year: 2025, url: "https://photos.app.goo.gl/ZoxuA25Hutkjbw8J8", thumb: "jurassic-rebirth.webp", category: "Fiksi" },
-      { title: "Ghost Train", year: 2025, url: "https://photos.app.goo.gl/an4dkSvBfRfJQwy78", thumb: "ghost-train.webp", category: "Marvel, Action" },
-      { title: "The Bad Guys 2", year: 2025, url: "https://photos.app.goo.gl/SukS1koyq1n1JcwJ9", thumb: "gusy.webp", category: "Animasi" },
-       { title: "Iron Man 3", year: 2013, url: "https://photos.app.goo.gl/uPS8d8R4ZTVAcrNS9", thumb: "iron-man-3.webp", category: "Marvel, Action" },
-      { title: "mission impossible", year: 2025, url: "https://photos.app.goo.gl/htjNvRGgwtMHpgpu8", thumb: "mission.webp", category: " Action" },
-      { title: "Iron Man 2", year: 2010, url: "https://photos.app.goo.gl/PY5k8wCkJASvDRYk6", thumb: "Iron-Man-2.webp", category: "Marvel, Action" },
-      { title: "Leprechaun The Beginning", year: 2025, url: "https://photos.app.goo.gl/psNcXAiaMQbmH1yaA", thumb: "Leprechaun.webp", category: "Horor" },
-      { title: "Dragon Nest: Warriors' Dawn", year: 2014, url: "https://photos.app.goo.gl/87beK3frL5tVaEQF7", thumb: "Dragon Nest.webp", category: "Animasi" },
-      { title: "Superman", year: 2025, url: "https://photos.app.goo.gl/WyR3JcvUzp9ixQt17", thumb: "Superman.webp", category: "Action" },
-      { title: "Avatar: The Way of Water", year: 2022, url: "https://photos.app.goo.gl/pHPKTPDchbJAuu6G8", thumb: "avatar2-600.webp", category: "Action,Fiksi " },
-      { title: "aashiqui-2", year: 2013, url: "https://photos.app.goo.gl/31NRiF7Lp95FEBFj7", thumb: "aashiqui-2.webp", category: "India" },
-      { title: "Elio", year: 2025, url: "https://photos.app.goo.gl/AVJoippW4goUkp868", thumb: "elio.webp", category: "Animasi" },
-      { title: "Iron Man 1", year: 2008, url: "https://photos.app.goo.gl/FzrS6s2unE9RernC7", thumb: "Iron Man.webp", category: "Marvel, Action" },
-      { title: "Avatar", year: 2009, url: "https://photos.app.goo.gl/td1ipB3vQLArbRFj8", thumb: "avatar.webp", category: "Fiksi, Action, Fantasi" },
-      { title: "Norma Antara Mertua dan Menantu", year: 2025, url: "https://photos.app.goo.gl/TMJdqp7PKRZSWwb39", thumb: "mertua.webp", category: "Fiktif, Indonesia" },
-      { title: "The wild Robot", year: 2024, url: "https://photos.app.goo.gl/7Au5KEtKmyTMJKds8", thumb: "robot1.webp", category: "Animasi" },
-      { title: "3 idiots ", year: 2009, url: "https://photos.app.goo.gl/K53AmQmRsEHGjV8z7", thumb: "3idiots-600.webp", category: "India" }
+      { title: "S Line - Season 1 Episode 1-6", year: 2025, url: "https://raw.githubusercontent.com/kasihterma-star/myflix/0cee5f916940f3a74f51279eeedca8696db44324/line.webp", category: ", korea,series" },
     ];
 
 
