--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <script>
     // === DATA ===
     const videos = [
-      { title: "S Line - Season 1 Episode 1-6", year: 2025, url: "https://raw.githubusercontent.com/kasihterma-star/myflix/0cee5f916940f3a74f51279eeedca8696db44324/line.webp", category: ", korea,series" },
+      { title: "S Line - Season 1 Episode 1-6", year: 2025, url: "https://photos.app.goo.gl/qH2bRFYyokshJF4A6", thumb: "line (1).webp", category: "Fantasi, series" },
     ];
 
 
