--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <script>
     // === DATA ===
     const videos = [
-      { title: "S Line - Season 1 Episode 1-6", year: 2025, url: "https://photos.app.goo.gl/qH2bRFYyokshJF4A6", thumb: "line (1).webp", category: "Fantasi, series" },
+      { title: "S Line - Season 1 Episode 1-6", year: 2025, url: "https://photos.app.goo.gl/qH2bRFYyokshJF4A6", thumb: "line (1).webp", category: "korea, series" },
     ];
 
 
