--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     // === DATA ===
     const videos = [
       { title: "S Line - Season 1 Episode 1-6", year: 2025, url: "https://photos.app.goo.gl/qH2bRFYyokshJF4A6", thumb: "line (1).webp", category: "korea, series" },
+      { title: "hidden love  - Season 1 Episode 1-25", year: 2025, url: "https://photos.app.goo.gl/ZHB2Zy1eTnhoKarE6", thumb: "hiddenlove.webp", category: "cina, series" },
     ];
 
 
